fixed white space on right side

--- a/style/style.css
+++ b/style/style.css
@@ -40,6 +40,10 @@ footer {
   height: 8%;
 }
 
+.main-container {
+  overflow: hidden;
+}
+
 .about-container,
 .project-container,
 .contact-container {
